SAK-16343 Allow timeout period to be explicitly set for presence
Plus some opportunistic code cleanup.

git-svn-id: https://source.sakaiproject.org/svn/presence/trunk@62524 66ffb92e-73f9-0310-93c1-f5514f145a0a